@startuml

title __CMDLINE's Class Diagram__\n

  package view {
    package view.cmdline {
      class AccountsCmd {
          ~ AccountsCmd()
          ~ listAccounts()
          ~ showAccount()
          ~ requestToCreate()
      }
    }
  }
  

  package view {
    package view.cmdline {
      class CommandLineUI {
          - readPasswordFromConsole : boolean
          - reader : BufferedReader
          - input : InputStream
          - output : PrintStream
          - error : PrintStream
          - curAccounts : ArrayList<Account>
          + CommandLineUI()
          + getInput()
          + getOutput()
          + getError()
          + getReader()
          + getATM()
          + getCurAccounts()
          + setCurAccounts()
          ~ getBankSystem()
          + mainLoop()
          ~ readPassword()
          ~ checkUserLogin()
          ~ checkBankManagerLogin()
          ~ searchAccount()
      }
    }
  }
  

  package view {
    package view.cmdline {
      class HelpCmd {
          - commandHelp : HashMap<String, String>
          ~ HelpCmd()
          ~ help()
      }
    }
  }
  

  package view {
    package view.cmdline {
      class ManagerCmd {
          ~ ManagerCmd()
          - showRequest()
          - showRequests()
          - getRequest()
          - processRequest()
          ~ processRequests()
          ~ addUser()
          ~ undoTx()
          ~ stockCash()
          ~ showCash()
      }
    }
  }
  

  package view {
    package view.cmdline {
      class PersonsCmd {
          ~ PersonsCmd()
          ~ login()
          ~ changePassword()
          - showMessage()
          - showMessages()
          - getMessage()
          - deleteMessage()
          ~ processMessages()
          ~ logout()
          ~ setPrimary()
      }
    }
  }
  

  package view {
    package view.cmdline {
      class TxCmd {
          ~ TxCmd()
          ~ moveMoney()
          ~ deposit()
          ~ payBill()
          ~ withdraw()
      }
    }
  }
  

  AccountsCmd o-- CommandLineUI : ui
  AccountsCmd o-- AccountFactory : accountFactory
  CommandLineUI -up-|> UI
  CommandLineUI o-- ATM : machine
  CommandLineUI o-- HelpCmd : helpCmd
  CommandLineUI o-- PersonsCmd : personsCmd
  CommandLineUI o-- AccountsCmd : accountsCmd
  CommandLineUI o-- TxCmd : txCmd
  CommandLineUI o-- ManagerCmd : managerCmd
  HelpCmd o-- CommandLineUI : ui
  ManagerCmd o-- CommandLineUI : ui
  PersonsCmd o-- CommandLineUI : ui
  TxCmd o-- CommandLineUI : ui


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
